--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
 <main>
 <body>
-    <section class="header">
-    <h1><strong>Jasmine's Porfolio</strong></h1>
-</section></body></main>
+    <article>
+        <h1>Welcome to Jasmine's Page</h1>
+      </article>
+      <span>
+
+     <div class="topnav">
+        <a class="active" href="./index.html">Home</a>
+        <a href="./Portfolio.html">Projects</a>
+        <a href="./Contact.html">Contact</a>
+        <a href="./AboutMe.html">About</a>
+      </div>
+    </span>
+
+<element id="photo"><img src="/Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Jasmine1_files/Jasmine1.jpg" height="400" weight="400">
+</element>
+</main>
+</body></html>
