--- a/AboutMe.html
+++ b/AboutMe.html
@@ -14,8 +14,10 @@
     <a href="./Contact.html">Contact</a>
     <a href="./AboutMe.html">About</a>
   </div>
-  
-<element class="about">
+  <div class="card">
+    <div class="container">
+        <element class="about">
     <h6>Hello, my name is Jasmine. I am currently enrolled in a Boot Camp Program at UCI. I am so excited to be learning so much about Coding. 
 </h6>
 </element>
+</div></div>
