--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <script src="Untitled-2.js"></script>
     <link rel="stylesheet" href="./assets/style.css">
     <title>My Portfolio</title>
 </head>
@@ -15,12 +16,11 @@
 
    <span id="project"><strong> My First Project</strong></span>
 
-   <span id="title">Create your Porfolio using HTML and Stylesheet</h2></span>
+   <span id="portfolio-title"><h5>Create your Porfolio using HTML and Stylesheet</h5></span>
 
 </ul>
 
-<span id="photo"><img src="/Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Screen Shot 2022-03-28 at 8.41.05 PM.png" width=300 height=200></p>
-
-</element>
-
+<span id="photo"><button onclick= a href="./index.html" img src="/Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Screen Shot 2022-03-28 at 8.41.05 PM.png" width=300 height=200></p>
+</span></button>
+</span></html>
   </div>
