--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 
 <main>
 <body>
-    <article>
-        <h1>Welcome to Jasmine's Page</h1>
-      </article>
-      <span>
-
+    <section class="header">Welcome to Jasmine's Page 
+    </section>
+    <nav>
      <div class="topnav">
         <a class="active" href="./index.html">Home</a>
         <a href="./Portfolio.html">Projects</a>
         <a href="./Contact.html">Contact</a>
         <a href="./AboutMe.html">About</a>
+        <a href="">Resume</a>
       </div>
+  </nav>
     </span>
 
-<element id="photo"><img src="/Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Jasmine1_files/Jasmine1.jpg" height="400" weight="400">
-</element>
-</main>
-</body></html>
+  <div class="jumbo">
+    <div class="cool-title"> 
+      COOL TITLE HERE!
+
+
+    </div>
+
+
+  </div>
+
+  </section></body></main></html>
+
