--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,25 +2,39 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <script src="Untitled-2.js"></script>
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <script src="Untitled-2.js"></script>
+  <link rel="stylesheet" href="./assets/style.css">
+  <title>My Portfolio</title>
 </head>
 <div class="topnav">
-    <a class="active" href="./index.html">Home</a>
-    <a href="./Portfolio.html">Projects</a>
-    <a href="./Contact.html">Contact</a>
-    <a href="./AboutMe.html">About</a>
-  </div>
+  <a class="active" href="./index.html">Home</a>
+  <a href="./Portfolio.html">Projects</a>
+  <a href="./Contact.html">Contact</a>
+  <a href="./AboutMe.html">About</a>
+</div>
 
-   <span id="project"><strong> My First Project</strong></span>
+<class id="project"><strong>Portfolio Project</strong></class>
 
-   <span id="portfolio-title"><h5>Create your Porfolio using HTML and Stylesheet</h5></span>
+<class id="portfolio-title">
+  <h5>Create your Porfolio using HTML and Stylesheet</h5>
+</class>
 
-</ul>
 
-<span id="photo"><button onclick= a href="./index.html" img src="/Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Screen Shot 2022-03-28 at 8.41.05 PM.png" width=300 height=200></p>
-</span></button>
-</span></html>
-  </div>
+<img id="photo"><a href="./index.html"><img src="./Users/jasminelanuevo/Desktop/My Portfolio/MyPortfolio/assets/images/Screen Shot 2022-03-28 at 8.41.05 PM.png" width=300 height=200></p>
+</class></button>
+
+<class id="project"><strong>Movie Library Project</strong></class>
+
+<class id="portfolio-title">
+  <h5>Collab with assigned group and create an application using HTML, Javascript, CSS, and Web API's</h5>
+</class>
+
+<img id="photo"><button onclick=a href="https://github.com/jasmineranay/Project1.git" img
+    src="https://raw.githubusercontent.com/jasmineranay/Project1/main/assets/images/SitePreview.png" width=300 height=200></p>
+</class></button>
+
+</class>
+
+</html>
+</div>
