--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+  <nav class="navbar navbar-light" style="background-color: #e3f2fd;"></nav>
   <div class="container">
     <a class="navbar-brand" href="#">Jasmine</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,23 +66,23 @@
           </div>
 
           <div class="col-lg-8">
-              <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+              <p> I am an in progress software engineer.
                   
               </p>
               <div class="row mt-3">
                   <div class="col-md-6">
                       <ul>
-                          <li>Name: David Parker</li>
-                          <li>Age: 28</li>
-                          <li>Occupation: Web Developer</li>
+                          <li>Name: Jasmine Tsao</li>
+                          <li>Age: 30</li>
+                          <li>Occupation: Student</li>
 
                       </ul>
                   </div>
                   <div class="col-md-6">
                       <ul>
-                          <li>Name: David Parker</li>
-                          <li>Age: 28</li>
-                          <li>Occupation: Web Developer</li>
+                          <li>Ethnicity: Filipino</li>
+                          <li>Favorite Food: Sushi</li>
+                          <li>Dream Job: CyberSecurity</li>
 
                       </ul>
                   </div>
@@ -197,7 +198,7 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Quiz App</h4>
+                        <h4 class="card-title">Portfolio Page</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
                             <a href="#" class="btn btn-success">Link</a>
