--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/jasmine-lanuevo-1832b823b/" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
       </div>
   </div>
