--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card">
-                    <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.07.02 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">YouTube Clone</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h4 class="card-title">Movie Library</h4>
+                        <p class="card-text">Created a movie library using IMBD API's, OMBD API's, Javascript, HTML, CSS</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="https://github.com/jasmineranay/Project1.git" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
@@ -196,12 +196,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.11.25 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Portfolio Page</h4>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="./index.html" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
@@ -209,12 +209,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.13.10 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Product Landing Page</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h4 class="card-title">Code Quiz</h4>
+                        <p class="card-text">Create a quiz using HTML, Javascript, & CSS</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="https://github.com/jasmineranay/Code-Quiz.git" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
