--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.11.25 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Portfolio Page</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="card-text">Create a Portfolio displaying all projects.</p>
                         <div class="text-center">
                             <a href="./index.html" class="btn btn-success">Link</a>
                         </div>
