--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.30.40 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Messaging Service</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h4 class="card-title">Weather Application</h4>
+                        <p class="card-text">Create a weather app displaying 5 days of the weather with the city using Web API's, Javascript, CSS, & HTML.</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="https://github.com/jasmineranay/Weather-App.git" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
@@ -237,12 +237,12 @@
 
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-05-19 at 7.33.23 PM.png" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Twitter Clone</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h4 class="card-title">Daily Scheduler</h4>
+                        <p class="card-text">Create a daily scheduler by storing reminder in LocalStorage.</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="https://github.com/jasmineranay/calendarhomework.git" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
@@ -305,11 +305,9 @@
   <div class="container-fluid">
       <!-- social media icons -->
       <div class="social-icons mt-4">
-          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/jassmineranay" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/jassmineranay/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/jasmine-lanuevo-1832b823b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
       </div>
   </div>
 </footer>
