--- a/index.html
+++ b/index.html
@@ -252,10 +252,23 @@
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Blog App</h4>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h4 class="card-title">Dungeon Crawler Game Application</h4>
+                        <p class="card-text">Use Node.js and Express.js to create a RESTful API.
+                            Use Handlebars.js(Or another) as the template engine.
+                            Use MySQL and the Sequelize ORM for the database.
+                            Have both GET and POST routes for retrieving and adding new data.
+                            Use at least one new library, package, or technology that we haven’t discussed.
+                            Have a folder structure that meets the MVC paradigm.
+                            Include authentication IF APPLICABLE (express-session and cookies).
+                            Protect API keys and sensitive information with environment variables.
+                            Be deployed using Heroku (with data).
+                            Have a polished UI.
+                            Be responsive.
+                            Be interactive (i.e., accept and respond to user input).
+                            Meet good-quality coding standards (file structure, naming conventions, follows best practices for class/id naming conventions, indentation, quality comments, etc.).
+                            Have a professional README (with unique name, description, technologies used, screenshot, and link to deployed application).</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-success">Link</a>
+                            <a href="https://github.com/jasmineranay/RPG_Dungeon_Crawler" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
